<resources>
    <string name="app_name">Utau Music</string>
    <string name="utau_music">Utau Music</string>
    <string name="avatar">avatar</string>
    <string name="strip4">-</string>
    <string name="album">Album</string>
    <string name="lisa">LiSA</string>
    <string name="lisa_music">Gurenge</string>
    <string name="lisa_album">LEO-NiNE</string>
    <string name="lisa_desc">Risa Oribe, better known by her stage name LiSA, is a Japanese singer, songwriter and lyricist from Seki, Gifu, signed to Sacra Music under Sony Music Artists.\nAfter aspiring to become a musician early in life, she started her musical career as the vocalist of the indie band Chucky. Following Chucky is disbandment in 2008, LiSA moved to Tokyo to pursue a solo career, making her major debut in 2010 singing songs for the anime television series Angel Beats! as one of two vocalists for the fictional band Girls Dead Monster. In April 2011, she made her solo debut with the release of her mini-album Letters to U. She performed at Animelo Summer Live in August 2010, Anime Expo in 2012, and is a regular guest at Anime Festival Asia.\nLiSA\'s songs have been featured as theme music for various anime such as Fate/Zero, Sword Art Online and Demon Slayer: Kimetsu no Yaiba. Her singles have regularly been in the top ten of the Oricon weekly charts, with \'Crossing Field\' being certified platinum by the Recording Industry Association of Japan and \'Oath Sign\' being certified gold. She performed at the Nippon Budokan in 2014 and 2015.\n\nFrom Wikipedia (https://en.wikipedia.org/wiki/LiSA_(Japanese_musician,_born_1987)) under Creative Commons Attribution CC-BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0/legalcode)</string>
    <string name="yoasobi">Yoasobi</string>
    <string name="yoasobi_music">あの夢をなぞって</string>
    <string name="yoasobi_album">Single</string>
    <string name="yoasobi_desc">Yoasobi is a Japanese music superduo formed by Sony Music Entertainment Japan, composed of Vocaloid producer Ayase, and singer-songwriter Ikura. Represented by the slogan \'novel into music\', the duo has released songs based on novels posted on Monogatary.com, a novel-centered social media operated by their label, which is also from various media like novels written by professional authors, books, and letters.\nAfter going viral on social media, Yoasobi is 2019 debut single, \"Yoru ni Kakeru\", gave them their breakthrough by reaching atop the Billboard Japan Hot 100 for six non-consecutive weeks and the 2020 year-end chart, and becoming the first song to be certified diamond for streaming by Recording Industry Association of Japan. It was followed by other successful singles, such as Blue Period-inspired \'Gunjō\', and Beastars\' second season theme \'Kaibutsu\'. The group\'s first two EPs, The Book and The Book 2, both peaked at number two on the Oricon Albums Chart. They also released the English EP, titled E-Side.\n\nFrom Wikipedia (https://en.wikipedia.org/wiki/Yoasobi) under Creative Commons Attribution CC-BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0/legalcode)</string>
    <string name="flow">FLOW</string>
    <string name="flow_music">Sign</string>
    <string name="flow_album">Sign</string>
    <string name="flow_desc">Flow is a Japanese rock band formed in 1998 as a five-piece band made up of two vocalists, a drummer, a bassist, and a guitarist. They are signed to Sacra Music. As of April 2022, the band has released 38 singles, 2 collaboration singles with Granrodeo and 11 studio albums. Their songs have been featured in the opening sequences of several anime and Japanese drama series.\n\nFrom Wikipedia (https://en.wikipedia.org/wiki/Flow_(Japanese_band)) under Creative Commons Attribution CC-BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0/legalcode)</string>
    <string name="lilas">Lilas Ikuta</string>
    <string name="lilas_music">Omokage (produced by Vaundy)</string>
    <string name="lilas_album">Omokage (produced by Vaundy)</string>
    <string name="lilas_desc">-</string>
    <string name="rie">Takahashi Rie</string>
    <string name="rie_music">Chiisana Koi no Uta</string>
    <string name="rie_album">Chiisana Koi no Uta</string>
    <string name="rie_desc">Rie Takahashi is a Japanese voice actress and singer affiliated with 81 Produce. She had a leading role in the anime series Seiyu is Life!, where she became part of the musical unit Earphones. She voiced Futaba Ichinose in Seiyu is Life!, Megumin in KonoSuba, Emilia in Re:Zero − Starting Life in Another World, Takagi-san in Teasing Master Takagi-san, Mash Kyrielight in Fate/Grand Order, Mirai Asahina/Cure Miracle in Witchy PreCure!, Dan Kouzo in Bakugan: Battle Planet, and Hu Tao in Genshin Impact. She performed theme songs for the same series. She won the Best Female Newcomer at the 10th Seiyu Awards.\n\nFrom Wikipedia (https://en.wikipedia.org/wiki/Rie_Takahashi) under Creative Commons Attribution CC-BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0/legalcode)</string>
    <string name="claris">ClariS</string>
    <string name="claris_music">ALIVE</string>
    <string name="claris_album">ALIVE</string>
    <string name="claris_desc">ClariS is a Japanese pop music duo which formed in 2009 with singers Clara and Alice from Hokkaido, who were in junior high school at the time. The pair began singing covers and submitting them to Japanese video sharing website Niconico between 2009 and 2010. ClariS later signed to SME Records and released their debut single \'Irony\' in October 2010. Three more singles were released between 2011 and 2012, followed by their debut album Birthday. Birthday was awarded a Gold Disc by the Recording Industry Association of Japan for having exceeded 100,000 copies shipped in a single year. Six more singles were released between 2012 and 2014, which were featured on their second album Second Story and third album Party Time. Alice left the unit following Party Time is release, and Karen joined ClariS in late 2014. ClariS moved to the Sacra Music record label under Sony Music Entertainment Japan in 2017.\nClariS\' music has been featured in anime series such as Oreimo, Puella Magi Madoka Magica, Nisemonogatari, Nisekoi, and Eromanga Sensei. They have also performed at the Nippon Budokan, and at anime music events in Japan such as Animax Musix and Animelo Summer Live.\n\nFrom Wikipedia (https://en.wikipedia.org/wiki/ClariS) under Creative Commons Attribution CC-BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0/legalcode)</string>
    <string name="eve">Eve</string>
    <string name="eve_music">Kaikan Kitan</string>
    <string name="eve_album">Kaikan Kitan / Ao no Waltz</string>
    <string name="eve_desc">Eve is a singer-songwriter and Vocaloid producer. He got his start in the Music Industry by doing covers on Nico Nico Douga.\nHe eventually signed to Toy is Factory in 2019, moving away from Harapeco Records. He was also a guest in \'School of Lock!\' by Tokyo FM.\nHis music has been featured in the anime Dororo, Jujutsu Kaisen and Josee, the Tiger and the Fish.\n\nFrom Wikipedia (https://en.wikipedia.org/wiki/Eve_(Japanese_singer)) under Creative Commons Attribution CC-BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0/legalcode)</string>
    <string name="kana">Kana-Boon</string>
    <string name="kana_music">シルエット</string>
    <string name="kana_album">TIME</string>
    <string name="kana_desc">Kana-Boon are a Japanese rock band formed in 2008. They made their major debut with Ki/oon Music in 2013. Ever since, they have had four albums reach the top ten on the weekly Oricon Albums Chart, with Doppel being their best-charting album, reaching the third place on the chart. They have also had five singles reach the top ten on the weekly Oricon Singles Chart, with \'Full Drive\' being their best-charting single, reaching the sixth place on the chart. Three of their singles have been used in the Naruto franchise, with \'Silhouette\' being used as the 16th Naruto Shippuden opening theme, and \'Diver\' as the theme song for Boruto: Naruto the Movie and Baton Road as the first season opening for Boruto: Naruto Next Generations. The B-side for \'Diver\', \'Spiral\', was the theme song for Naruto Shippuden: Ultimate Ninja Storm 4 video game. This group also made a single for the anime The Perfect Insider titled \'Talking\'. Their single \'Fighter\' was chosen to be the fourth opening of Mobile Suit Gundam: Iron-Blooded Orphans. Shortly after that, their new single titled \'Baton Road\' was chosen to be the first opening of the Naruto sequel, Boruto: Naruto Next Generations.\n\nFrom Wikipedia (https://en.wikipedia.org/wiki/Kana-Boon) under Creative Commons Attribution CC-BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0/legalcode)</string>
    <string name="alia">AliA</string>
    <string name="alia_music">hide-and-seek</string>
    <string name="alia_album">Alive</string>
    <string name="alia_desc">-</string>
    <string name="aimer">Aimer</string>
    <string name="aimer_music">Zankyosanka</string>
    <string name="aimer_album">Asa ga Kuru</string>
    <string name="aimer_desc">Aimer is a Japanese pop singer and lyricist signed to SACRA MUSIC and managed by agehasprings. Her name comes from the verb \'Aimer\' in French, which means \'to love\'. Aimer uses the name aimerrhythm for lyrics credits.\nDebuted in 2011, she has released six studio albums, all of which made it into the top 20 of the Oricon Albums Chart, with fourth album Daydream being certified Gold by the Recording Industry Association of Japan. Her 2021 song \'Zankyosanka\' became her first song to reach the top of the Japan Hot 100 chart, selling 87,649 downloads in its first week. It also charted at number 37 on the Billboard Global 200, marked her first appearance on the chart.\n\nFrom Wikipedia (https://en.wikipedia.org/wiki/Aimer) under Creative Commons Attribution CC-BY-SA 3.0 (http://creativecommons.org/licenses/by-sa/3.0/legalcode)</string>
    <string name="detail">Detail</string>
    <string name="about">About</string>
    <string name="dimas_ajisaka_kurniawan">Dimas Ajisaka Kurniawan</string>
    <string name="email">dimasajisakakurniawan@gmail.com</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="um_logo">um_logo</string>
    <string name="foto_profile">Foto Profile</string>
    <string name="back">back</string>
    <string name="icon">icon</string>
</resources>