<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="?attr/bg">

    <com.google.android.material.appbar.MaterialToolbar
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="?attr/appbar"
        app:layout_scrollFlags="scroll|enterAlways"
        style="@style/Widget.MaterialComponents.Toolbar.Primary">

        <Button
            android:id="@+id/backarrow"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="start"
            android:layout_marginStart="14dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@color/material_blue"/>

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@id/backarrow"
            android:layout_marginStart="10dp"
            android:text="@string/about"
            android:fontFamily="@font/product_sans_bold"
            android:textSize="24sp"
            android:textColor="@color/material_blue"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="150dp"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/product_sans_bold"
        android:text="@string/dimas_ajisaka_kurniawan"
        android:textColor="@color/material_blue"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/product_sans_medium"
        android:text="@string/email"
        android:textColor="?attr/boldText"
        android:textSize="14sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>