<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="?attr/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/backarrow"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="14dp"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="@color/material_blue"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:text="@string/detail"
            android:fontFamily="@font/product_sans_bold"
            android:textSize="24sp"
            android:textColor="@color/material_blue"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="124dp"
                    android:layout_height="124dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:src="@tools:sample/avatars"
                    android:contentDescription="@string/icon" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/product_sans_bold"
                    tools:text="Title"
                    android:textColor="@color/material_blue"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="6dp"
                    android:fontFamily="@font/product_sans_medium"
                    tools:text="Artist"
                    android:textColor="?attr/boldText"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/artist"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="@string/album"
                    android:textColor="@color/material_blue"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/albumname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/album"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/product_sans_medium"
                    tools:text="Album Name"
                    android:textColor="?attr/boldText"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/albumname"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="@string/description"
                    android:textColor="@color/material_blue"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/desccontent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/desc"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/product_sans_medium"
                    tools:text="Desciption Content"
                    android:textColor="?attr/boldText"
                    android:textSize="14sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>